Add interactive resume page

--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
   <h1>Jaquan Watson</h1>
   <p>Cloud & Systems Engineer | Data & Cybersecurity Enthusiast</p>
 
+  <h2>Resume</h2>
+  <p><a href="resume.html">View Interactive Resume</a></p>
+
+
   <h2>🚀 Featured Projects</h2>
 
   <div class="project">
