--- a/resume.html
+++ b/resume.html
@@ -16,7 +16,7 @@
 <body>
   <h1>Jaquan Watson</h1>
   <p>Cloud & Systems Engineer | Data & Cybersecurity Enthusiast</p>
-  <p><a href="mailto:your_email@example.com">your_email@example.com</a> | <a href="https://www.linkedin.com/in/jaquanwatson">LinkedIn</a> | <a href="https://github.com/jaquanwatson">GitHub</a></p>
+  <p><a href="mailto:your_email@example.com">jqwatson96@gmail.com</a> | <a href="https://www.linkedin.com/in/jaquanwatson">LinkedIn</a> | <a href="https://github.com/jaquanwatson">GitHub</a></p>
 
   <div class="section">
     <h2>Summary</h2>
