updated Dates Perikin

--- a/resume.html
+++ b/resume.html
@@ -55,7 +55,7 @@
     <!-- Professional Summary -->
     <section class="mb-12">
       <h2 class="text-3xl font-bold mb-6 text-blue-700">Professional Summary</h2>
-      <p class="text-lg leading-relaxed">Results-driven IT Systems Administrator and Cybersecurity Professional with 3+ years of experience managing secure, scalable environments in Microsoft 365, Azure, and hybrid infrastructures. Military-trained with advanced avionics systems and program management background. Proven expertise in IT automation, cloud security, and operational excellence. Skilled in PowerShell scripting, endpoint protection, compliance support, and cloud platforms like AWS and Microsoft Azure. Currently pursuing advanced cybersecurity certifications (CompTIA CySA+) to deepen skills in threat detection and response. Passionate about leveraging automation and data-driven insights to enhance enterprise security and resilience.</p>
+      <p class="text-lg leading-relaxed">Results-driven IT Systems Administrator and Cybersecurity Professional with 2+ years of experience managing secure, scalable environments in Microsoft 365, Azure, and hybrid infrastructures. Military-trained with advanced avionics systems and program management background. Proven expertise in IT automation, cloud security, and operational excellence. Skilled in PowerShell scripting, endpoint protection, compliance support, and cloud platforms like AWS and Microsoft Azure. Currently pursuing advanced cybersecurity certifications (CompTIA CySA+) to deepen skills in threat detection and response. Passionate about leveraging automation and data-driven insights to enhance enterprise security and resilience.</p>
     </section>
 
     <!-- Core Competencies -->
@@ -94,7 +94,7 @@
       <div class="space-y-8">
         <div class="experience-card p-6 rounded-xl border-l-4 border-blue-600 bg-gray-50 hover:shadow-md transition">
           <h3 class="text-2xl font-semibold mb-3">Systems Administrator / Engineer</h3>
-          <p class="text-gray-600 mb-4">Perikin Enterprises | [Month/Year] - Present</p>
+          <p class="text-gray-600 mb-4">Perikin Enterprises | August 2023 - Present</p>
           <ul class="list-disc list-inside space-y-2 text-lg">
             <li>Manage and secure Microsoft 365 GCC High environment for 150+ endpoints and Hyper-V virtual machines.</li>
             <li>Implement and manage security configurations: MFA enforcement, conditional access, role-based access controls.</li>
